[package]
name = "nv"
version = "0.1.0"
authors = ["Łukasz Kurowski <crackcomm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nv"
path = "bin/nv.rs"

[dependencies]
dialoguer = "^0.6.2"
zbox = { version = "0.9.1", features = ["storage-file", "libsodium-bundled"] }
structopt = "^0.3.18"
dirs = "^3.0.1"
console = "^0.11.3"

prettytable-rs = "^0.8"

rand = { version = "0.7", features = ["small_rng"] }
hex = "^0.4.2"

argon2rs = { version = "^0.2.5" }
primitive-types = "0.7.2"
mnemonic = "1.0.1"
