[package]
name = "nv"
version = "0.2.2"
authors = ["Łukasz Kurowski <crackcomm@gmail.com>"]
edition = "2018"
description = "Secure secret store"
license = "GPL-3.0"
repository = "https://github.com/crackcomm/nv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nv"
path = "bin/nv.rs"

[dependencies]
dialoguer = "^0.6.2"
zbox = { version = "0.9.1", features = ["storage-file", "storage-zbox-native", "libsodium-bundled"] }
structopt = "^0.3.18"
dirs = "^3.0.1"
console = "^0.11.3"

prettytable-rs = "^0.8"

rand = { version = "0.7", features = ["small_rng"] }
hex = "^0.4.2"
chrono = "^0.4.18"

argon2rs = { version = "^0.2.5" }
primitive-types = "0.7.2"
mnemonic = "1.0.1"
clipboard = "^0.5"

indicatif = "^0.15"

repl-rs = "^0.2.3"
err-derive = "^0.2.4"

path_abs = "^0.5"
