[package]
name = "nv"
version = "0.4.0"
authors = ["Łukasz Kurowski <crackcomm@gmail.com>"]
edition = "2018"
description = "Secure secret store"
license = "GPL-3.0"
repository = "https://github.com/crackcomm/nv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nv"
path = "bin/nv.rs"

[dependencies]
dialoguer = "^0.9"
zbox = { version = "^0.9.2", features = ["storage-file", "libsodium-bundled"] }
structopt = "^0.3.25"
dirs = "^4.0"
console = "^0.15"

prettytable-rs = "^0.8"

rand = { version = "^0.8.4", features = ["small_rng"] }
hex = "^0.4.3"
chrono = "^0.4.19"

argon2rs = { version = "^0.2.5" }
primitive-types = "^0.7.3"
mnemonic = "^1.0.1"
clipboard = "^0.5"

indicatif = "^0.16.2"

repl-rs = "^0.2.6"
err-derive = "^0.3"

path_abs = "^0.5"
